# chartengine

./: .gitignore  CHANGELOG.md  ISSUES.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: public_api_classification.md  release.md
docs/adr/: 0001-engine-skill-separation.md  0002-vertical-first-quality-gates.md  0003-golden-reference-reports.md  0004-round-trip-metadata-principle.md  0005-ai-collaboration-discipline.md  0006-template-safe-chart-data-update.md  0007-chart-asset-kernel-boundary.md  0008-lightweight-test-discipline.md  README.md
docs/prds/: 0001-range-snapshot-visual-polish.md  README.md
docs/prds/archive/: 0002-template-safe-inspect-replace.md  2026-04-19-range-snapshot-handover.md
scripts/: make_gallery.py  make_readme_hero.py  release.sh
src/ablechart/: __init__.py  _log.py  annotations.py  api.py  cleaner.py  examples.py  layout.py  metadata.py  oxml_ns.py  plot_area.py  polish.py  presets.py  range_chart.py  range_snapshot.py  replace.py  schema.py  semantic_anchor.py  semantic_family.py  spec.py  styles.py  tokens.py  waterfall.py
src/ablechart/oxml/: __init__.py  axes.py  plots.py  series.py
src/pptchartengine/: __init__.py  _log.py  annotations.py  api.py  builder.py  cleaner.py  date_axis.py  inspect.py  layout.py  metadata.py  oxml_ns.py  parser.py  polish.py  presets.py  replace.py  scatter.py  spec.py  styles.py  waterfall.py
src/pptchartengine/oxml/: axes.py  plots.py  series.py
tests/: test_axis_resolution.py  test_axis_title.py  test_external_chart.py  test_external_fixture_file.py  test_gtm_patterns.py  test_inspect.py  test_legend_entry_control.py  test_package_contract.py  test_parser_internals.py  test_polish.py  test_release_readiness.py  test_replace.py  test_round_trip_matrix.py  test_semantic_dispatcher_contract.py  test_spec_layer.py  test_tick_label_rotation.py
tests/fixtures/: _generate_external_sample.py  external_sample.pptx
